# DigitalElectronics3_2025

./: CMakeLists.txt  README.md
Blinking_LED/: LPC1769_dri.c  LPC1769_reg.c
Blinking_LED/STM32_HAL/: .cproject  STM32_HAL.ioc
Blinking_LED/STM32_HAL/Core/Src/: main.c
Blinking_LED/STM32_LL_Blinking_LED/: .cproject  .mxproject  .project  STM32_LL_Blinking_LED.ioc
Blinking_LED/STM32_LL_Blinking_LED/Core/Inc/: main.h
Blinking_LED/STM32_LL_Blinking_LED/Core/Src/: main.c
Blinking_LED/STM32_reg_Blinking_LED/: .cproject  .project  STM32_reg_Blinking_LED.ioc
Blinking_LED/STM32_reg_Blinking_LED/Core/Src/: main.c
One_digit_auto_counter/: LPC1769_CMSIS_drivers.c  LPC1769_registers.c  STM32_HAL_drivers.c  STM32_registers.c
Template/: Template.ioc
